<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="resetPasswordViewModel"
            type="com.example.menupop.resetPassword.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/password_reset_confirm_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset_confirm"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="23sp"

            android:padding="30dp"
            android:paddingBottom="30dp"/>

        <EditText
            android:id="@+id/password_reset_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"

            android:inputType="textPassword"

            android:hint="@string/password_rule"
            android:textColorHint="@color/light_gray"
            android:paddingStart="10dp"
            android:textSize="15sp"

            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/basic_margin"
            android:layout_marginBottom="4dp"

            app:layout_constraintTop_toBottomOf="@id/password_reset_confirm_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_reset_warning_text"/>

        <TextView
            android:id="@+id/password_reset_warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/red"
            android:text="@string/password_rule_warning"
            android:textSize="14sp"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="8dp"
            android:gravity="center_vertical"

            android:visibility="@{resetPasswordViewModel.isPasswordFormMatched() == null || resetPasswordViewModel.isPasswordFormMatched() == true ? View.GONE : View.VISIBLE}"

            app:layout_constraintTop_toBottomOf="@id/password_reset_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_reset_confirm_edittext"/>

        <EditText
            android:id="@+id/password_reset_confirm_edittext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"

            android:hint="비밀번호 확인"
            android:textColorHint="@color/light_gray"
            android:paddingStart="8dp"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/basic_margin"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="15sp"

            android:inputType="textPassword"

            app:layout_constraintTop_toBottomOf="@id/password_reset_warning_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_reset_confirm_warning_text"/>

        <TextView
            android:id="@+id/password_reset_confirm_warning_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/password_confirm_warning"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"

            android:gravity="center_vertical"

            android:visibility="@{resetPasswordViewModel.isConfirmPasswordMatched() == true || resetPasswordViewModel.isConfirmPasswordMatched() == null ? View.GONE : View.VISIBLE}"

            app:layout_constraintTop_toBottomOf="@id/password_reset_confirm_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_reset_confirm_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/password_reset_confirm_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/button_round"
            android:backgroundTint="@color/orange"

            android:text="비밀번호 재설정"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"

            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginStart="@dimen/basic_margin"
            android:layout_marginEnd="@dimen/basic_margin"

            app:layout_constraintTop_toBottomOf="@id/password_reset_confirm_warning_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>