<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.menupop.SignupViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appbar_menu"
            layout="@layout/appbar"/>

        <EditText
            android:id="@+id/signup_id_edittext"
            android:layout_width="@dimen/signup_with_button_edittext_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"

            android:hint="아이디(6-12자 이내, 영문, 숫자 사용 가능)"

            android:textSize="15.5sp"
            android:textColorHint="@color/light_gray"
            android:paddingStart="10dp"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/appbar_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_id_duplication_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_id_duplication_button"
            android:layout_width="@dimen/signup_button_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/button_round"

            android:text="중복확인"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/appbar_menu"
            app:layout_constraintStart_toEndOf="@id/signup_id_edittext"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signup_id_warning"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/signup_warning_height"

            android:text="@{viewModel.idWarning}"
            android:textColor="@color/red"
            android:textSize="15.5dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/signup_id_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signup_password_edittext"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"

            android:hint="@string/password_rule"
            android:textColorHint="@color/light_gray"
            android:textSize="15.5sp"
            android:inputType="textPassword"

            android:paddingStart="10dp"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/signup_id_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signup_password_warning"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/signup_warning_height"

            android:text="@string/password_rule_warning"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/signup_password_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signup_password_confirm_edittext"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"

            android:hint="비밀번호 확인"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
            android:inputType="textPassword"

            android:paddingStart="10dp"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/signup_password_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signup_password_confirm_warning"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/signup_warning_height"

            android:text="@string/password_confirm_warning"
            android:textSize="15.5sp"
            android:textColor="@color/red"
            android:gravity="center_vertical"
            android:paddingStart="10dp"

            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/signup_password_confirm_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signup_email_id_edittext"
            android:layout_width="@dimen/email_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"

            android:hint="이메일"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"


            app:layout_constraintTop_toBottomOf="@id/signup_password_confirm_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_email_at"/>

        <TextView
            android:id="@+id/signup_email_at"
            android:layout_width="@dimen/email_at_width"
            android:layout_height="@dimen/standard_height"

            android:text="@"
            android:textColor="@color/light_gray"
            android:gravity="center"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/signup_password_confirm_warning"
            app:layout_constraintStart_toEndOf="@id/signup_email_id_edittext"
            app:layout_constraintEnd_toStartOf="@id/signup_email_selection"/>

        <Spinner
            android:id="@+id/signup_email_selection"
            android:layout_width="@dimen/email_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"
            android:layout_marginTop="10dp"

            android:entries="@array/spinner_items"

            app:layout_constraintTop_toBottomOf="@id/signup_password_confirm_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signup_email_at"/>

        <TextView
            android:id="@+id/signup_email_warning"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/signup_warning_height"

            android:text="@string/email_rule_warning"
            android:textColor="@color/red"
            android:textSize="15.5sp"
            android:paddingStart="10dp"
            android:gravity="center_vertical"

            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/signup_email_id_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/signup_certification_edittext"
            android:layout_width="@dimen/signup_with_button_edittext_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/stroke"
            android:layout_marginTop="10dp"

            android:textColor="@color/black"

            app:layout_constraintTop_toBottomOf="@id/signup_email_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_certification_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_certification_button"
            android:layout_width="@dimen/signup_button_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/button_round"

            android:text="인증번호"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"

            android:enabled="@{viewModel.isEnableButton}"

            app:layout_constraintTop_toBottomOf="@id/signup_email_warning"
            app:layout_constraintStart_toEndOf="@id/signup_certification_edittext"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/signup_certification_warning"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/signup_warning_height"

            android:text="시간 제한 3:00"
            android:textColor="@color/red"
            android:textSize="15.5sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/signup_certification_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            android:id="@+id/signup_personal_checkbox"
            android:layout_width="@dimen/signup_checkbox"
            android:layout_height="@dimen/signup_checkbox"
            android:buttonTint="@color/light_gray"
            android:layout_marginTop="20dp"


            app:layout_constraintTop_toBottomOf="@+id/signup_certification_warning"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_provide_information"/>

        <TextView
            android:id="@+id/signup_provide_information"
            android:layout_width="@dimen/signup_information"
            android:layout_height="@dimen/signup_checkbox"

            android:text="개인정보 제3자 제공 동의"
            android:textColor="@color/light_gray"
            android:textSize="15.5sp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"

            app:layout_constraintTop_toBottomOf="@+id/signup_certification_warning"
            app:layout_constraintStart_toEndOf="@id/signup_personal_checkbox"
            app:layout_constraintEnd_toStartOf="@id/signup_check_provide_information"/>

        <TextView
            android:id="@+id/signup_check_provide_information"
            android:layout_width="@dimen/signup_information_check"
            android:layout_height="@dimen/signup_checkbox"

            android:layout_marginTop="20dp"
            android:gravity="center_vertical|end"
            android:text="@string/checkbox_information"
            android:textColor="@color/light_gray"
            android:textSize="15.5sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signup_provide_information"
            app:layout_constraintTop_toBottomOf="@+id/signup_certification_warning" />

        <CheckBox
            android:id="@+id/signup_marketing_checkbox"
            android:layout_width="@dimen/signup_checkbox"
            android:layout_height="@dimen/signup_checkbox"
            android:buttonTint="@color/light_gray"


            app:layout_constraintTop_toBottomOf="@id/signup_personal_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_marketing_information"/>

        <TextView
            android:id="@+id/signup_marketing_information"
            android:layout_width="@dimen/signup_information"
            android:layout_height="@dimen/signup_checkbox"

            android:text="상품 정보 및 혜택 수신 동의"
            android:textColor="@color/light_gray"
            android:textSize="15.5sp"
            android:gravity="center_vertical"


            app:layout_constraintTop_toBottomOf="@+id/signup_provide_information"
            app:layout_constraintStart_toEndOf="@id/signup_marketing_checkbox"
            app:layout_constraintEnd_toStartOf="@+id/signup_check_marketing_information"/>

        <TextView
            android:id="@+id/signup_check_marketing_information"
            android:layout_width="@dimen/signup_information_check"
            android:layout_height="@dimen/signup_checkbox"

            android:text="@string/checkbox_information"
            android:textColor="@color/light_gray"
            android:textSize="15.5sp"
            android:gravity="center_vertical|end"


            app:layout_constraintTop_toBottomOf="@id/signup_check_provide_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signup_marketing_information"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_submit_button"
            android:layout_width="@dimen/signup_password_and_warning_width"
            android:layout_height="@dimen/standard_height"
            android:background="@drawable/button_round"
            android:backgroundTint="@color/orange"

            android:text="가입하기"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"

            app:layout_constraintTop_toBottomOf="@id/signup_marketing_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

          />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>